# pclab

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: ci.yml
pclab/: __init__.py  cache.py  db.py  schema.sql
pclab/api/: project.py  sample.py
pclab/assets/: aggrid.js  main.css  main.js
pclab/layout/: default.py
pclab/pages/: home.py  labeler.py  not_found_404.py  project.py
pclab/utils/: common.py  figure.py  model.py  pipeline.py  pipleline.py  preprocess.py
