[metadata]
name = pclab
version = attr: pclab.__version__
url = https://github.com/mcpcpc/pclab
    Source Code = https://github.com/mcpcpc/pclab
    Issue Tracker = https://github.com/mcpcpc/pclab/issues
author = Michael Czigler
author_email = michaelczigler@mcpcpc.com
license = BSD-3-Clause
license_file = LICENSE
description = Principle component labeler.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask, dash, pca, labeler, ml
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flask
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = true
python_requires = >= 3.10
install_requires =
    dash[celery,diskcache]
    dash-ag-grid
    pillow
    scikit-learn

[options.extras_require]
test = coverage
serve = waitress
lint = black